# peer-agents

./: .gitignore  README.md  context.md  pyproject.toml
src/peer_agents/: __init__.py
src/peer_agents/agents/: __init__.py  author.py  base.py  critic.py  orchestrator.py
src/peer_agents/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/peer_agents/prompts/: author.txt  critic.txt  orchestrator.txt
src/peer_agents/utils/: __init__.py  file_context.py
tests/: test_orchestration.py
